--- a/fluency22-analyses.Rmd
+++ b/fluency22-analyses.Rmd
@@ -9,7 +9,7 @@ output:
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
-options(warn=-1)
+#options(warn=-1)
 library(tidyverse)
 library(tidyboot)
 library(ggplot2)
