--- a/fluency_cogsci2022.ipynb
+++ b/fluency_cogsci2022.ipynb
@@ -1015,33 +1015,41 @@
       },
       "source": [
         "## create semantic similarity matrix\n",
-        "embeddings for 771 animal words were obtained from: https://github.com/plasticityai/magnitude"
+        "word2vec embeddings for 771 animal words were obtained from: https://github.com/plasticityai/magnitude"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 19,
       "metadata": {
         "id": "f3aFPCCZelEd"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "embeddings are shaped: (771, 300)\n",
+            "vocab is 771 words\n"
+          ]
+        },
+        {
+          "data": {
+            "text/plain": [
+              "771"
+            ]
+          },
+          "execution_count": 19,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# import embeddings\n",
-        "embeddings = pd.read_csv(\"animals_embeddings.csv\").values\n",
+        "embeddings = pd.read_csv(\"data/animals_embeddings.csv\").values\n",
         "print(f\"embeddings are shaped:\", embeddings.shape)\n",
-        "print(f\"vocab is {len(embeddings)} words\")"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "T0_hYk_MDaEA"
-      },
-      "outputs": [],
-      "source": [
-        "simlabels = pd.read_csv('new_animals.csv', header=None).values.reshape(-1,).tolist()\n",
-        "len(simlabels)"
+        "print(f\"vocab is {len(embeddings)} words\")\n",
+        "len(labels)"
       ]
     },
     {
@@ -1071,7 +1079,7 @@
         "\n",
         "  print(\"sim matrix has been saved to drive!\")\n",
         "\n",
-        "create_sim_matrix(embeddings, simlabels)\n"
+        "create_sim_matrix(embeddings, labels)\n"
       ]
     },
     {
@@ -1148,7 +1156,7 @@
         "  pd.DataFrame(pmatrix).to_csv('data/simlabels_phon_matrix.csv', index=False, header=False)  \n",
         "  print(\"phon matrix has been saved to drive!\")\n",
         "\n",
-        "create_phon_matrix(simlabels)\n"
+        "create_phon_matrix(labels)\n"
       ]
     }
   ],
